--- a/source/_posts/管好我，爱好你，顾好家.md
+++ b/source/_posts/管好我，爱好你，顾好家.md
@@ -7,6 +7,30 @@ tags:
 
    2019-08-03晚，一个“由叹气引发的血案”发生了。
    
-   小宇同学在之前已经数次强调，一听到我叹气就火大。“一个年纪轻轻的小伙子，天天唉声叹气的，像个什么样子。我一听到就火大，情绪立马就上来了。”
+&emsp;&emsp;小宇同学在之前已经数次强调，一听到我叹气就火大。“一个年纪轻轻的小伙子，天天唉声叹气的，像个什么样子。我一听到就火大，情绪立马就上来了。”
    
-   当时的情形这样的。小宇说，“你今天下午家教情况怎么样呀？讲了那么久，给我也讲一下呗？”，我回应道，“就是普通的讲例题呗，从审题开始...”。听到她说的照本宣科之类的词，我当时有点情绪了。在我的感觉中，这个词是贬义词，表示千篇一律，固守成规的意思。对于别人怎么做家教，怎么教学生，我确实不太了解。就自身而言，我对我教的方式是比较有自信的，与小孩子沟通，找到相同话题，谈心，发现他审题习惯、做题习惯中一些存在的问题等等。就如这一个孩子，在处理概率论相关问题的时候，我就发现他做题时习惯把审题、解题、计算混在一起。由于基础比较薄弱，三者交叉在一起就会导致顾此失彼。我就要求他，一步只做一件事情。第一步，审题、逻辑梳理，每读一句话，就把这句话转化为数学语言；第二步，分析目标并进行转化，根据要求的目标以及已有的信息，列出对应的方程式。第三部，带入具体数字，求取结果。
+&emsp;&emsp;当时的情形这样的。小宇说，“你今天下午家教情况怎么样呀？讲了那么久，给我也讲一下呗？”，我回应道，“就是普通的讲例题呗，从审题开始...”。听到她说的照本宣科之类的词，我当时有点情绪了。在我的感觉中，这个词是贬义词，表示千篇一律，固守成规的意思。对于别人怎么做家教，怎么教学生，我确实不太了解。就自身而言，我对我教的方式是比较有自信的，与小孩子沟通，找到相同话题，谈心，发现他审题习惯、做题习惯中一些存在的问题等等。就如这一个孩子，在处理概率论相关问题的时候，我就发现他做题时习惯把审题、解题、计算混在一起。由于基础比较薄弱，三者交叉在一起就会导致顾此失彼。我就要求他，一步只做一件事情。第一步，审题、逻辑梳理，每读一句话，就把这句话转化为数学语言；第二步，分析目标并进行转化，根据要求的目标以及已有的信息，列出对应的方程式。第三部，带入具体数字，求取结果。可能是我对家教的方式有一定信心，所以听到小宇说的话确实不太开心。
+   
+&emsp;&emsp;这里反映出了一些问题：
+   
+   1. 我没有细致地向她介绍我家教的方式，我觉得和别人不太一样的地方，她缺乏对我家教方式的理解。
+   2. 我缺乏对其他人家教方式的了解，不清楚自己家教的方式和别人有什么样的差异。
+   3. 我对自己家教的方式是认可的，但如小宇所说，玻璃心。听到别人的话，容易理解为对我的质疑、怀疑以及否定。
+   4. 双方的沟通方式出现了问题。这个问题是有源头的，之前的错事会使她对我认知产生不自觉的推定，而我急于辩驳，要么乱了阵脚，要么忽略了沟通的方式和技巧。
+   
+&emsp;&emsp;就家教的问题争论了一阵儿时间，在“强有力的攻势”下，我叹气承认，“好吧，我就是照本宣科”。对我而言，在缺乏具体了解情况的条件下，贸然对我下定义，且对我而言，我也不会主动向外人炫耀我家教多么有经验，有心得，多么多么厉害。因为我进入教育领域时间不长，接触的学生数量很少，说是有什么独到的见解，确实谈不上。但还是想要保留我在和学生沟通方面的自信的。
+   
+&emsp;&emsp;<font color="red">可以说在宇面前我变得脆弱了。或许一般情况我会说，是呀，本来家教都是那一个样子，但在她面前，我想好一些。由此我回想到，之前也有类似的，本来一个很普通的做顿饭，准备一次礼物，搞得很玄幻，渲染的很美好，但说到底也就是普通的东西。</font>
+
+&emsp;&emsp;<font color="red">从这里可以看出，我过于关注别人怎么看我，而不是做好事情，关注好自己的事情，进而通过自身的亮点来吸引别人，展示自己或者证明自己。这一点和我做事比较急躁有关系，急于看到结果，而缺乏一步步等待的耐心的习惯有关。</font>
+
+&emsp;&emsp;
+
+   
+   
+   
+   
+   
+   
+   
+   
