--- a/source/_posts/管好我，爱好你，顾好家.md
+++ b/source/_posts/管好我，爱好你，顾好家.md
@@ -11,7 +11,7 @@ date: 2019-08-05 00:52:00
 ---
 ## 前言
 
-   2019-08-03晚，一个“由叹气引发的血案”发生了。
+&emsp;&emsp;2019-08-03晚，一个“由叹气引发的血案”发生了。
    
 &emsp;&emsp;小宇同学在之前已经数次强调，一听到我叹气就火大。“一个年纪轻轻的小伙子，天天唉声叹气的，像个什么样子。我一听到就火大，情绪立马就上来了。”
    
@@ -30,13 +30,43 @@ date: 2019-08-05 00:52:00
 
 &emsp;&emsp;<font color="red">从这里可以看出，我过于关注别人怎么看我，而不是做好事情，关注好自己的事情，进而通过自身的亮点来吸引别人，展示自己或者证明自己。这一点和我做事比较急躁有关系，急于看到结果，而缺乏一步步等待的耐心的习惯有关。</font>
 
-&emsp;&emsp;
+&emsp;&emsp;在争论无果，我叹气表示╮(╯▽╰)╭，这成为了小宇情绪的爆发点。
 
-   
-   
-   
-   
-   
-   
-   
-   
+&emsp;&emsp;下面为一些摘录
+
+- 放狠话 你爱咋地就咋地 老子不伺候了 我还不问了
+- 咱俩就是没有共同语言
+- 你说你前女友总是愁眉苦脸 对未来没有信心，你本来信心满满结果被搞得意志不坚定
+- 你现在就变成跟你前女友一样
+- 你说过多少次你不会再叹气了
+- 结果呢
+- 好吃懒做 眼高手低 怨天尤人 自卑感作祟 不努力想着天下掉馅饼 孩子你醒醒吧
+- 自己这个不行 那个不行 你不做当然不行
+- 你自己说我对你要求过什么嘛？
+- 我就是希望咱俩在一起的时候能开心快乐
+- 结果呢，你跟我说什么你就是普通人 大哥 这跟咱俩开心快乐有一毛钱关系嘛？
+- 我让你上天了还是入地了？
+- 平时虚头巴脑的话一大堆，都是谎言，事情发生了，真让你办事的时候一个屁捅不出来
+- 你平时嘴巴不是挺会讲嘛，那你现在倒是说啊
+- 你负能量的时候，我开导你，让你不要叹气，小小年纪像80岁老头一样天天叹气，有问题就解决，结果呢，你告诉我你只是一个普通人，大哥我对你要求什么了嘛
+- 你爱死爱活其实跟我有什么关系呢，不过是因为我是你女朋友，我希望这段感情能让你觉得你是有收获的，有成长的。
+- 要不然我才懒得说你
+- 你之前总是标榜自己性格趋于完美，但是跟你接触的这段时间，说长不长说短不短，我发现你是一个不能正确认识自己的人。
+
+&emsp;&emsp;经过反思，眼高手低，缺乏锐气这一点确实没错。因而常常面对一些事情时退缩，感觉无从下手。其实小宇所得没错，没有踏踏实实地去做事。
+
+&emsp;&emsp;基于这一点，接下来该如何改进成了重要的问题。首先一点是，集中更多注意力去做好自己的事情，保持专注、认真、勤奋的工作状态。积极解决问题，平时遇到问题积极与老师同学沟通，保持良性互动。其次，努力提升自己工作水平和技术能力，找到自己职业的落脚点和支撑点，找到自己的价值所在。保持积极的探索欲和尝试欲，主动学习，积极学习。
+
+&emsp;&emsp;稳定自己的状态之后，会比较有自信，比较从容地把控好生活、学习、感情的节奏。应对一些问题也能够比较从容地应对。
+
+&emsp;&emsp;从2019-01-12起到今天为止已经相处了207天，时间说长不长，说短也不短。在这段期间做了好多错事，也使得小宇对我的印象感越来越差，期待感越来越低。
+
+&emsp;&emsp;最初的一次争吵来源于5月底有一天下午看到小宇的消息没有及时回复，当时是那几天被导师催任务催的有些烦躁，当时看到小宇的消息就先放在一边去眯了一会儿。小宇说的一句话很有道理，现在你可能因为自己的事情烦躁不想理我，以后可能随时不想理我就不理我。见微知著，以后可能就是这样。
+
+&emsp;&emsp;这一次给我的启示是，遇到问题，不要逃避，有什么事情说出来就好了。就如当时的情况，完全我可以说，宇宇实在抱歉，这两天被导师催的有点烦躁，我想要自己静一静，一会儿我和你打过去好不好？我先休息一会儿。而不是把宇宇放在一边，什么都不告诉她。
+
+&emsp;&emsp;随后6月1号晚上坐车回家的时候，小宇想看看我淘宝记录，了解下我平时喜欢的东西。往下翻着翻着，我突然想起了之前买过的东西，然后开始阻止她继续往下翻。事已至此，最终她还是发现了。走在小区的路上，她不说话，很冷静，但我能感觉到她只是强忍着。那天晚上，大概是我和她相处这么久，她唯一在我面前哭过的一次。“这个世界上那么多人，你为什么偏偏找上了我？我到底做错了什么，你要这样对我？”“如果不是这次偶然的发现，你打算瞒我多久？你就这么心安理得理所当然地享受着这一切，享受着我对你的好？”“不断地麻痹自己，那都是过去的事，我只要以后好好对她就好了。”“之前我那么相信你，你却对我这样。你对我还有哪些是真的？”“我之前从来不相信人可以这么坏，这次却让我遇到了。不过也好，以后我就知道了”...听到她哭着说这些话，我心里愧疚、自责、懊悔又痛心。听到她哭着说，你对我哪些是真的的时候，我声嘶力竭地说道，感情是真的，感情是真的。这大概是我当时唯一的心声了。那天晚上我发呆了好久，好好看了一下自己。不知什么时候，我变成了现在这个样子，变成了我痛恨，我最不想成为的样子。“曾经的我那么相信你，现在我再也不敢相信你”，这句话一遍遍在我耳边环绕。“你对别人怎么样，把这些手段用在其他方面都可以，可以你居然用在我身上，用在家里的女朋友身上”。“或许未来你可以遇到一个啥也不知道，不在乎的女朋友或者遇到一个喜欢和你一起有各种心思的女朋友，但我不是，我不希望我的感情是这个样子。” 我很迷茫，随着自己的成长，人性中自私、自利、缺乏责任、损人利己的私欲充斥在我的身上。
+
+&emsp;&emsp;当时的我，很羡慕小宇对爱情的纯粹，因而也营造自己纯情少年的形象，殊不知感觉或者说直觉是个神奇的东西，正如小宇说的，很早她就开始感觉我在瞒着她，
+
+
