--- a/source/_posts/暑假家教记录.md
+++ b/source/_posts/暑假家教记录.md
@@ -9,8 +9,8 @@ date: 2019-08-03 20:21:00
 |:----------:	|:--------:	|:--------:	|:----:	|:--------:	|
 | 2019-08-03 	| 15:00    	| 17:30    	| 2.5  	| 概率统计 	 |
 | 2019-08-04    | 15:00     | 17:30     | 2.5   | 概率统计   |
-|            	|          	|          	|      	|          	|
-|            	|          	|          	|      	|          	|
+| 2019-08-05   	| 15:00     | 17:30     | 2.5   | 概率统计   |
+| 2019-08-06    | 14:30     | 17:30     | 3     | 概率统计   |
 |            	|          	|          	|      	|          	|
 |            	|          	|          	|      	|          	|
 |            	|          	|          	|      	|          	|
