--- a/source/_posts/管好我，爱好你，顾好家.md
+++ b/source/_posts/管好我，爱好你，顾好家.md
@@ -67,6 +67,499 @@ date: 2019-08-05 00:52:00
 
 &emsp;&emsp;随后6月1号晚上坐车回家的时候，小宇想看看我淘宝记录，了解下我平时喜欢的东西。往下翻着翻着，我突然想起了之前买过的东西，然后开始阻止她继续往下翻。事已至此，最终她还是发现了。走在小区的路上，她不说话，很冷静，但我能感觉到她只是强忍着。那天晚上，大概是我和她相处这么久，她唯一在我面前哭过的一次。“这个世界上那么多人，你为什么偏偏找上了我？我到底做错了什么，你要这样对我？”“如果不是这次偶然的发现，你打算瞒我多久？你就这么心安理得理所当然地享受着这一切，享受着我对你的好？”“不断地麻痹自己，那都是过去的事，我只要以后好好对她就好了。”“之前我那么相信你，你却对我这样。你对我还有哪些是真的？”“我之前从来不相信人可以这么坏，这次却让我遇到了。不过也好，以后我就知道了”...听到她哭着说这些话，我心里愧疚、自责、懊悔又痛心。听到她哭着说，你对我哪些是真的的时候，我声嘶力竭地说道，感情是真的，感情是真的。这大概是我当时唯一的心声了。那天晚上我发呆了好久，好好看了一下自己。不知什么时候，我变成了现在这个样子，变成了我痛恨，我最不想成为的样子。“曾经的我那么相信你，现在我再也不敢相信你”，这句话一遍遍在我耳边环绕。“你对别人怎么样，把这些手段用在其他方面都可以，可以你居然用在我身上，用在家里的女朋友身上”。“或许未来你可以遇到一个啥也不知道，不在乎的女朋友或者遇到一个喜欢和你一起有各种心思的女朋友，但我不是，我不希望我的感情是这个样子。” 我很迷茫，随着自己的成长，人性中自私、自利、缺乏责任、损人利己的私欲充斥在我的身上。
 
-&emsp;&emsp;当时的我，很羡慕小宇对爱情的纯粹，因而也营造自己纯情少年的形象，殊不知感觉或者说直觉是个神奇的东西，正如小宇说的，很早她就开始感觉我在瞒着她，
+&emsp;&emsp;当时的我，很羡慕小宇对爱情的纯粹，因而也营造自己纯情少年的形象，殊不知感觉或者说直觉是个神奇的东西，正如小宇说的，很早她就开始感觉我在瞒着她，只是一直只是一种感觉，并不能确信。而当她得到验证的那一刻，对我的信任彻底崩塌了。正如她所说的，曾经的她那么相信我，现在却不再敢去相信我。
 
+&emsp;&emsp;第二周临走的时候，在她无意中翻看我照片时，又发现了出轨的证据。无地自容的我不知道说些什么。在我坐上车之后，小宇和我打电话说，以后你不要这样了，我当时看到心都碎了。
+
+&emsp;&emsp;和我在一起的这段日子，小宇受了很多委屈，但却从来没有放弃过我。而我几次都因为觉得自己不能照顾好宇宇而动了逃避的念头。那次是她第二次要哭，“你要把我推走，推给别人”。
+
+小宇的世界很大，曾经的她踌躇满志愿走出一片天地；她的世界也很小，在爱情这片领域内，她需要的是那么少。
+
+昨天晚上和小宇聊天过程中，我认真思考了一下我的未来应该怎么走。之前的时候一直不确定，这个也感兴趣，那个也想要试一下，始终我能做什么，我可以做什么。当初小宇说，你什么都可以做，但是你要是只想，什么都不行啊。我当时有些不以为然，非计算机出身的我，怎么可能超出别人，这一点不是我的优势；我去学习金融，cpa，cfa这些，更是一窍不通，隔行如何山，这又怎么能是我的路？但回头想想，当下我的优势又是什么？又有什么呢？
+
+不努力，那就永远在原地踏步，不走出安逸窝，那就永远坐井观天。其实从周末见过廖总回来，尽管踌躇满志地说要考教师资格证，似乎有种从程序的执念中解脱的释放，但实际上我是知道，对于技术的向往，还一直在。或许也是一种遗憾？
+
+也正是小宇的一句话，我觉得你可以做技术，因为你喜欢这个呀！这句话看似稀疏平常，但却给了我很大的力量。我突然想起来了小宇所得一句话，我和你在一起，就是为了在一起开心快乐。对呀，开心快乐就好。同样，对于我未来的事业，我为何不能勇敢地选择自己喜欢的一个方向呢？即便是我非科班出身，基础薄弱，可能工作会碰壁，但是我喜欢这个呀。我喜欢用技术改变生活，改变工作的愉悦感。基础薄弱可以去学，工作起点低可以慢慢沉淀，我有足够的事件去学习，去充实自己，而学习的过程常常能使我乐在其中。这样就够了呀！没必要想的太过复杂。不好做的事情，积极去找解决办法，一步步地进行克服，大家都是这么过来的呀。不需要带着什么思想包袱，喜欢，去做就好了。什么北大，什么博士，什么年龄，似乎只是我给自己设置的心理局限。自己过得舒服、心理顺畅才是最重要的呀。畏首畏尾，不敢拼不敢努力，沉不下心，我是一直讨厌这种状态的。
+
+追本溯源，这种心态来源于何处？可能一进入北大，脱离了原生的家乡环境，脱离了傲视群雄的地方，对这片当初陌生的领域，我产生了极强的孤独感。这种孤独，并非是找不到人一起玩，一起说话，而是失去了自己的方向。不知道自己想要什么，自己喜欢什么，自己未来要追寻什么。尤其是一进来面临学习的极大挫折，使得我选择性地去逃避一些事情。逃避作业，逃避科研，逃避往知识高峰攀登的步伐。不自觉地给自己安排上一个差等生的帽子标签，一个在学业上苦苦挣扎的学渣的标签。说努力了，确实没错。但却不够专注。似乎从那时候开始起，我的重心就已经偏离了我的成长本身。开始寻求集体的帮助，参与各种活动。大家一起玩，一起浪。但问题是，别人并没有偏离自己的主线，都是写完作业，做完项目才会出去玩，而我，可能作业一丢，玩去咯。所以大一大二异常活跃的我，实际上是在逃避着什么。对，逃避着自己做决定。当时，与其说是我不懂得拒绝，不愿拒绝，不如说是我主动去以别人的事或者集体的事，来逃离自己的事。
+
+写到这里，准备去QQ空间摘录下当年写的总结日志。
+
+```
+多年未打开qq空间，被qq空间的标语：分享生活，留住感动触动了。看了一下，注册天数2610天。时间过得真快啊，当年那些特别关心，那些“谁看过我”，那些留言板，那些写下的中二日志... 似乎并没有走远。 不知道是QQZone这么多年的执念，还是开发团队的懒，页面没变，还是一谢。
+```
+这是刚刚发的说说。说说，这个名词都已经好多年没有听过了呀！既然来到了这里，顺便做一波回忆录好了。
+
+2012-06-16，高考结束的第一周，我开辟了我的QQ空间，也算是开启了接触互联网的第一步。那时候还没有买来电脑，刚配上智能手机的时候简直惊为天人，居然能装软件，各种稀奇古怪的东西装了个便。打字好舒服呀，比之前用的功能机打字舒服太多了。注册完QQ后，我开始挨个添加好友。小伙伴们得知我有了QQ，也是一阵惊叹。哇，小武居然也玩QQ了！像我这样只爱学习的人，居然也会玩QQ？ 当时我家还没有装修，就在房间里QQ的咳嗽声不断，我妈还问，这是谁在咳嗽啊！我爸开始笑了起来，是电脑，电脑QQ... 
+
+```
+连城诀
+孤鸿白雪踏飞燕，天山镜冰照暖寒。
+世间何须连城扰，但留净土在心间。
+```
+当时还是个文青少年...
+```
+假期已过去了不少天，想想自己收获了多少，却发现几乎一无所获。不知该说是惭愧，还是其他的什么。在校总想抽出一点时间，哪怕只是课间十分钟的空闲。而现在，整天的光阴留给了我，我却不知该干什么。无语，还是无语······没有目标的生活的确可怕，没有压力的生活更可怕。我想好好玩玩，却发现不知干玩什么，相比以前，我应该有更好的玩的条件，可实际上，并非如此。条件变了，自然感觉也不一样。
+从小到大的学习模式把我束缚的很紧，上高中以来，我一直寻求改变，改变，极力不在成为书呆子的模版。从高一到高二是一次大的跨越，而从高二到高三，我的改变几乎有时令我不安。开始时可以打破常规，后来便慢慢成为常规。有时我甚至怀疑我还是我吗，简直是颠覆！的确，高一我几乎不玩，高二我开始尝试，然后高三，便是放开了玩。我的性格也是逐步由内向向外向蔓延有时连我也会笑自己，怎么会这样。高中的确让我改变了很多，很多。高三是我感觉成长最快的一年，在高二的基础上，它让我的心态，学习，交际，管理都有提高。高三我还是逼自己，不过不再是逼自己死学，而是逼自己玩。美化一点来说是让自己调节，刻意地玩。要知道以前我可是·······
+也罢也罢，过去的也就算了，我也不后悔自己的改变，毕竟一切都是我的成长。有些改变的无所谓，有些事必须的，还有一些是我永远不想改变的，或许它是最重要的······
+今天太无聊了，随便写写，明天还有明天的路·······
+```
+这是高考结束的第一个暑假。
+```
+太多时候，我们关注着别人，却忽略了自己。
+有时候，不经意的瞬间，突然发现，自己好像好久不曾这样安静地思考问题了，好久没有类似的夜晚，自己在独自地回想过往的岁月。多少个夜晚是在手机的陪伴下入睡，多少次醒后才发现还有数条qq、wechat抑或其它等等……又或多少次是在考虑到不得不保持睡眠时间的情况下才不甘愿地离开电脑，然后想想却又想不起自己究竟忙过什么……
+
+想想有时候真的可笑，当初看”致青春“，当听到男主角的那句话”人有时候会变成自己曾经讨厌的模样“的时候，自己还不甚了解，而当自己真正走过了一段路之后才猛然发现，自己有何尝不是痛恨自己如今的模样。穿过了人生的十字路口，却迷失在宽敞而笔直的大道上。
+
+真的感觉到变了，变得有时候让我感觉到我在慢慢褪去那份特殊性，那种感觉，或者稍稍感觉准确地来说，是那份独立性。而更有趣的是，它，也就是独立性，恰恰是我开始认识自己，最看重的一部分。我曾把它当作新春的祝福，送给最温馨的好友，希望永不褪色，却不曾想到，自己却未曾做到……
+
+然而，说过多地关注别人，却忽略了自己却又显得不是太合适。或许，说是缺乏深入地认识自己更为贴切些。过去的一年多的时间里，所以感觉学习生活一团糟，大概也是缺乏必要的认识，以及切实的行动。上层的思路紊乱，下层的力度不足，造成了体系的难以运作。想过的或者做过的小修小补显得力不从心，无济于事，大的动作却又发现不知从何做起。而如今，仔细地想想，这些问题其实并不是进入大学或者说是高中毕业之后才出现的，而是贯穿整个学业生涯的。简单的有规则的体制下，比如高中，即使有所偏差，无论是主观还是客观，都会能够被及时纠正，回归正常路线，而我们所需要做的只是些许简单并且并不需要非常扎根于内心深处甚至只要不是太脆弱的性格或者品性即可。在这个体系下，及时的负反馈有积极的正反馈会最大程度的推动我们的学业乃至其他方面发展。而比较复杂的体系，则负反馈会显得较弱，并且更大部分在于我们自己的选择。正反馈的两种截然相反的作用也会显示的比较明显，强者更强，弱者更弱，当然它的前提是之前的选择之一。可悲而又可笑的是，这个二选一的选择的两个选项的受欢迎程度确实差别悬殊。而我，也开始意识到，自己正慢慢地开始从少部分移向大多数……呵呵，惰性使然，惯性使然。
+
+偶尔，也会有不经意的瞬间点醒打瞌睡的迷茫，有的是以往的记忆，有的是现实的警醒，当然，也会有不见经传的莫名奇妙的失眠。它们有的让我暂时看清走过的路，它们有的给我点亮远方的星，有的让我终于狠下心来跨过那一道为自己设下的槛…… 不幸的是，要么，星光太弱，要么体力不足……还未撑到正反馈来临之时，就陷入了相反的正反馈。大概这就是当下的困境吧。
+
+无论是逃避，还是急功近利，抑或短暂的注意力转移，想想，其实并不是自己缺少了什么，而是自己遗忘了什么，或者是处于某种自我保护，把它们隐藏了起来。勇气，担当，理性，智慧，自信……这些应该内化成自身的元素却被一次又一次的当成了需要外在支持才能显现的舶来物。遇强则强，才能少一些遗忘。
+```
+
+```
+批判的成长
+ 
+成长，大概就是经过每一个阶段，就会发现前面的论断，值得批判。
+或许，这是贯穿这两年以来为数不多不变的感受。在这两年的变化之中，发现曾经厌恶的，不再那么厌恶，曾经喜爱的，或许只是停留在表面。曾经排斥的，现在慢慢理解了很多。曾经经历“痛苦”得来的教训或经验，也不是完全正确。曾经静静地思考悟出的“人生哲学”有时候还需要结合批判性的思考……
+曾经感觉个人的习惯只关乎个人，曾经意识到个人应该融入集体，也曾经发现自身的独立性不该失去；曾经对所谓的流行感到不解，而现在却发现值得留恋，然而，对于当今的流行却依旧不甚理解，很多都是抓不住的，那些曾经逝去的而为失去的，却是现在倍感珍惜的；曾经习惯于以第一人称思考，后来发现，第一人称思考问题过于锐利，达到一个极端，改为第二人称思考，但过了一段时间，才发现，第一人称反而更好些，至少还能保持自己的独立性，能够独立地思虑，相比矫枉过正的后果而言，再看当初的“痛定思痛”，反而觉得有些疑问，这是进步，还是倒退？不经意间，当看到别人做事的方式方法时，突然意识到，这又多么像曾经的自己？！而看到“自己”的曾经，再细细思量，感觉看问题也不再那么果断了。
+成长的历程似乎是在取一个平衡，而自己却在衰减波的形式逐步逼近，而在这个过程中，损耗的是武断亦或是锐气，积累的是稳重与心境。说不上孰轻孰重，因为总是站在峰处羡平坦，站在平地羡起伏，然而，时间的不可逆，也决定了大多数时候仅仅是羡慕而已。
+```
+```
+行者无疆
+ ——写在20岁
+
+不知不觉，一年又这样过去，匆匆而来，匆匆而去，一年前还在大一迷茫中苦苦挣扎，两年前，正在用一个巅峰拼夺另一个巅峰，三年前，是一个分水岭，转折点……
+
+曾经经历过5.1,5.4,5.12，以及近五一、近六一的高考那年，留意每年上什么日子，似乎也成为了闲来无事的乐趣。貌似每次还能因为这个“乐趣”，自我感觉良好个几天。= =
+
+现在回想高中，或者初中，越来越感觉到遥远，过去的记忆虽然不至于模糊，但也感觉到不再那么容易触碰，看过去，看经历，更多地是一种旁观者的冷静分析、回顾，慢慢地从感性提升到理性。让过去的，就成为记忆吧~
+
+这一年来，虽然不至于像大一那样纠结，困惑，迷茫，但也过得依然艰辛。学业的问题依然没有充分改善，感性思维对判断力影响依然存在，个人情感的困局尚未完全走出等等。不过总体来说，自己在这一年中收获还是挺大的，尤其是这一学期以来，自己能够明显地感觉到自己的进步，这点对我来说是意义非凡的。毕竟这是我进入大学以来，第一次正向的反馈。
+
+总是习惯于走错路之后，走到绝境时，幸运地被“意外”激发改正的动力，却不知道自己还有多少次这样幸运的机会。看到别人的一帆风顺，总是免不了在心里暗自叹息，尽管知道走错也是有益，但还是不喜欢用这种方式，用一种失去，换取另一种经历或感悟。说至此，倒不至于嗟叹什么，嗟叹过往已是过去时，不过，整理一下思路，或许是必要的。
+
+1.      要时刻分清自己的重心是什么，什么是关键，什么要兼顾，什么可以暂时不用考虑。学业的现状很大程度上就是因为重心不分导致的。高中总结的东西，大学没有好好地继承发展，这是进入大学陷入迷茫期的一大原因。
+
+2.      要处理好独立性和集体性的关系。集体性的方面，在高中基本已经得到解决抑或改善，并且认识到独立性对于自己的重要性，但大学没有好好做到这一点。反而过于陷入集体活动，导致自己的独立性受到影响。独立的思维能力，判断能力是自己前进的指南针，永远不应失去。
+
+3.      谨防借力。希望通过借力达到某种目的，实现某个目标之前，首先要考虑，这个力基于什么，没有后续的借力，实现的目标能够维持？这个借力会不会让自己产生依赖感？自己的独立性是否受到抑制？在实现目标的过程中，自己处于何种地位？是领导，是核心地位，还是被借到的力牵着鼻子走？
+
+4.      牢记反思。遍寻，估计这个算是为数不多的优点之一。反思有深有浅，深刻的反思，必然是在浅层反思的积累之下产生的。经常注意反思自己近阶段的表现，有助于及时调整。尤其对于固执，这点更应该谨记。
+
+5.      勇于不断地否定，不断地尝试。肯定和否定之否定不同，在于多了一个思考尝试的过程。想当然的不可能，不可行，恰恰是自己视野的盲区，不走进去是不会见识到另一番天地。然而，这是需要积累的。就如图书馆自习一事而言，之前刻意的去自习一两次，却依然不喜欢那个地方，然而，近一月以来，真正静下心来，发现，确实是一个好地方。量到质的关系，大抵如此吧。
+
+其他的大多都是一些琐碎的感想了（上面的也够没逻辑了= =），一时难以理清，也罢，再凑一句话，作为奔三&&奔三的寄语：
+
+成长而不失天真；
+
+淡然而不失活力；
+
+独立而不骄然；
+
+批判而不埋叹；
+
+珍惜而不占有；
+
+拥有努力珍惜。
+
+行者无疆
+```
+
+```
+9号考完，到今天已经将近有一个月了。本应两个月的假期因为搬砖的缘故，几近缩短了一半，若真正用于学习倒也不至于太惭愧了。似乎每次写总结回顾的时候，心情总是很沉闷的，或许更准确的来说，以前更多是沉，而现在更多是闷。
+
+        之前过年回家一般也是最后一个，不过今年不同的是，直到现在成绩还没有完全出来，虽然剩下的一门半感觉不会有问题，但依然有种很不踏实的感觉。对比前几学期的绩点，这学期的成绩应该是最好的了，从大一下始，每学期的绩点都在缓慢上升，按理说自己应该是很受鼓舞的，但实际上却感觉到更加迷茫，困扰。或许很大一部分来源于对比。之前的视界太过狭窄，小小的视角只要容纳前面很短的路就足够了，而当自己真正睁开眼看周围、看世界时却发现，周围的一切都变化太快了，自己的步伐太慢，慢的使得自己很难有信心去相信自己能够跟上去。
+
+       简简单单，是对还是错？现在问自己这个问题，本身就感觉到很没有底气。尽管自己似乎一直对自己催眠，简简单单地思考，轻轻松松地前行，但实际上自己这一路上还是走的太束手束脚，缺乏果断和勇气。而最可怕的是，似乎也发觉，自己已经慢慢在偏离之前的路线，开始怀疑，开始想要朝着封闭行进。而就学习的路线上，尽管从绩点上看有所提升，但依旧难以掩饰自己对学习偏离太多的现状。
+
+       (⊙o⊙)… 刚刚翻了一下总结，发现上半年总结的够详细了o(╯□╰)o 重心就放在下半年吧。大三这半年，总的来说情况应该是很不错的，涉及的领域宽度增加很大，但学习的深度客观来说不如春季学期，至少自己复习量子的时间显然没有一个月。。。从暑假的兼职开始，到挑战杯，到创投酱油，以及从学生服务小队延展到搬砖，这半年来，自己做了大学两年来没有做过的事情。
+
+       但同样，也是因为此，愈发感觉到自己的视界太受限。对比之下，自己丝毫感觉不到自己能做什么，又应该做些什么，一种无力感萦绕着使得不知该如何做，如何选择。我是幸运的，每当自己走到困境，几近绝境之时，总有贵人相助，初中如此、高中如此、大学亦如此。但初中高中我能努力实现他们的期待，而大学，却总是充满太多惭愧，太多歉意。或许这就是最悲哀的事情，不是没有人帮你，而是有人很愿意帮助你，而自己却无法抓牢，在匆匆中失去一次又一次的期待与机遇。
+
+        来也匆匆，去也匆匆。多少变幻，又有多少不变。有事没事思考不属于物理的哲学，真不符合大物理果断、理性地风格。放手走吧，回到最开始的地方，追寻最初的理想。
+```
+
+```
+大学法则！要仔细看
+文章很长....也算对自己的一种警示吧....感觉不错的,给正在上大学的朋友们一点启示。
+一，别以为在学生会你能得到你曾经想要的。工作的热情很可能因为你所看到的所经历的一些事而改变，但是也不必惧怕。你有大一一年来适应或者承受，并做出是继续坚持还是退出的决定。
+二，大学可能有真实的爱情，但是记住只是可能。很多时候他们是因为别人都谈恋爱而羡慕或者别的原因而在一起。所以，不必为任何分手而受太大的伤，记住，太大的伤，真爱，还是值得追求的。
+三，如果你的家庭一般的话，那么记得你在大学有很多意外用钱的地方。比如二专业或者将来的各种班，为了你的家人和你自己的前途，永远别乱花钱。记住，永远。
+四，朋友，你大学的朋友很可能就是你将来事业的一部分。他们会帮助你。但是你也应该让自己有帮助他们的实力，所以，你要努力，你和你的朋友会一起在将来打造一个可能很辉煌的事业。很好听是吗？但是记住，你们都要努力。
+五，很多事情当你再回忆时会发现其实没什么。所以，不管你当时多么生气愤怒或者别的，都告诉自己不必这样，你会发现其实真的不必。
+六，学习，永远别忘记她。不管别人怎么说大学是个提高综合能力的地方云云，如果你学习失败了，你就什么也不是——不排除意外，但你考虑好了吗？你会是那个意外吗？？
+七，别说脏话，你应该知道习惯的力量。找工作或者和别人接触时，你随便的一个字或者几个字会让你在别人心中的形象大打折扣。
+八，好好利用在公共场合说话的机会，展示或者锻炼，都可以。
+九，别为你自己和别人下定论，无比重要。你所看到听到的可能只是一面，为这个失去可能的朋友，很不值。
+十，如果你发现很久了你一直是一个人去食堂吃饭或者去上自习，别在意，大学里一个人是正常的，你觉得孤独？你的朋友是怕你觉得你没有自由的空间，所以别以为你没有朋友。
+十一，很多事情别人通知你了，要说谢谢，没有通知你，不要责怪，因为那些事你其实应该自己弄清楚。
+十二,"我请你吃饭"之类的话不要乱说,因为所有人都会当真,不管你自己怎么想,大学里请人吃饭是很平常的事,几乎连请一个自己不怎么认识的人吃饭都很正常.
+十三,尊严是最重要的,但是在大学里，要懂得利用这个空间锻炼自己,要让自己的尊严有足够大的承受力,要知道,社会是一个最喜欢打碎人的尊严的地方,除了你自己,没人会为你保留它.
+十四,大学是亚社会.对,所以,当你上了高年级后,要让自己有大人的形象,大一的孩子看到你,你要能让他们感觉到你是他们的学长.你很成熟.
+十五,你有足够的理由佩服每天早起的人,不信的话,你去做.做到后会发现有很多人佩服你呢.
+十六,经常给家里打个电话,即使他们说不想你.
+十七,你可以有喝醉的时候,我们可以接受,但是你要明白和真正的朋友一醉才能让伤心事方休,否则,你只会是别人的谈资和笑柄.
+十八,如果你四年内很少去图书馆的话,你就等于自己浪费了一大笔一大笔财富.所以,长去那里,随意翻翻,都有收获.
+十九,不论男人还是女人,如果在大学里还把容貌当作重要的东西而过分重视的话,可能不会吃亏,但是早晚会吃亏.可能,很可能.
+二十,面试时很多老总会问你----如果你能见到老总的话-----你会做什么??也许你现在其实就可以记得这个问题,这样可能以后会好好答-----尤其对文科学生来说.
+二十一，新学期如果你接新生的话，当被问到学校怎么样之类的问题时，你要记住你不但是这个学校的一分子，你更要给你学弟学妹带来信心，你走过大一，你应该知道那时候对学长的信任多深。
+二十二，别总抱怨不公平，你的不公平对别人是公平的，辨证法——高三时学的，忘记了？
+二十三，别迷恋网络游戏。千万别。
+二十四，"我爱你"。别对很多人说这句话，在大学里，我的意思是，希望你只对一个人说，这是尊重你爱的人，更是尊重你自己的感情
+二十五，大学，因为你呆的地方是大学，所以你有空间承受失败和打击，因此，你应该......真的应该，找找......自信和自傲的区别，可以用一辈子的。
+二十六，如果你的个性让很多人对你敬而远之，那么你的个性是失败的，个性的成功在于能吸引，而不是能排斥。
+二十七，如果把上课不睡觉当做一种锻炼并且你做到了，那么，你很强，而且记住，其实你应该是这样的，老师再差，也比学生强，因为他们是老师。
+二十八，学生会的主席之类的干部，如果你尊重他们，告诉你自己那是因为他们是你的学长而不是因为他们是你的上级，事实上，大家都只是学生而已，只是学生。
+二十九，疯狂英语的话：别怕丢人，如果你实在不行就别怕丢人，行的话，建议你们-去追求丢人，那是一种成功的尝试，至于为此笑话你的人，你可以把他们从你将来人生对手的名单中排除了，所以你也不要笑话那些上台丢人的人。
+三十,从绝望中寻找希望,人生终将辉煌.
+三十一,如果你不抽烟的话,你的精力将比抽烟的时候好的多,这是绝对的.
+三十二,你的确要学得有心计,但是记住,永远记住,在社会上要胜利的唯一的方法永远只是一个,那就是实力,永远不用怀疑.
+三十三,面对不公平的东西,不要抱怨,你的不公平可能恰恰是别人的公平.所以,你不如去努力的奋斗,争取你自己最合适的公平.
+三十四,人生百态,不要对新的看不惯的东西生气,无所谓的,比如说恋人同居问题,和我们很多人无关的.
+三十五,别总请人吃饭,别总让别人请你吃饭——朋友除外!
+三十六,在大学里就开始训练自己的冷静力,这是一种能力的,有大事时,能安静并能快速想出办法的人,很厉害.
+三十七,大学的竞争范围是所有的大学生,所以,你知道是否可以放松学习的.
+三十八,大了,成熟了,稳重了 ,但是这和激情不矛盾,一种对工作和学习的冲击力及持久力会让你有特殊的魅力和个人实力
+三十九，记着在所谓的学生会里即便你就是主席如果你的四级没过没有毕业证的话，白搭！没单位想要你这样的人，单位需要的是工作的人，而不是当官的人。更何况现在的，就是主席，学到的是喝酒、抽烟、相互的吹捧
+四十，永远不要嘲笑你的教师无知或者单调，因为有一天当你发现你用瞌睡来嘲弄教师实际上很愚蠢时，你在社会上已经碰了很多钉子了。
+四十一不要幻想自己成为招聘会上的宠儿，当你明白百分之七十的初中生都可以上
+大学时，你应该明白人们不会去崇拜一个群体的大多数的。
+四十二英语一定要学好，但英语绝对不会是你生活的全部保障，所以多学点东西可能有时会救命的
+四十三，你可以看不惯一些东西，但是你应该学会接受——如果你没法改变那一切的话。
+四十四，对陌生人，或者把对方当做一张白纸，或者把对方当你的朋友，总之别当做敌人，即使你听到再多的关于他（她）的不好的传闻。
+四十五，爱你的人，不管你接不接受，你都应该感谢对方，这是对你们的尊重。
+四十六，在晚上，听听收音机也是种快乐和幸福。
+四十七, 每个星期一定要抽时间出来锻炼身体的。好处多多。
+四十八，如果周围有人嫉妒你，那么你可以把他从你的竞争者之列排除了，嫉妒人之人，难以成大事。
+四十九，别去争论，可以回忆一下，你会发现，人不可能赢得争论，可以说，争论所提级的话题都是不值得去争论的。
+五十，成功的方法多种多样 ，别不接受你看不惯的方法。
+五十一，男人，你长的可以不帅，但你这个人可以帅，而且，那才是真正得帅。（当然，女人也是同样得道理）所以，不必在穿着打扮上花太多心思。
+五十二，只有学习潇洒才可能一切潇洒。但是只是可能，因为处世能力过分出众而成功得人是有，但是你必须牢记实力得价值。
+五十三，进入大学，就是一个新的环境，接触新的人，你的所有过去对于他们来说是一张白纸，这是你最好的重新塑造自己形象的时候，改掉以前的缺点，没进入一个新的环境，都应该以全新的形象出现。
+五十四，为爱坚持的人，记得坚持可以，但是不要为爱受伤。
+五十五，或文或武，我是说你要有一样能行得地方，样样通样样松是为人之禁忌。样样通几样更通方是境界。
+五十六，QQ是联系朋友的工具，可以是交朋友的工具但是别轻易相信QQ上的友谊，更别轻易幻想QQ上朋友的样子。
+五十七，还能冲动，表示你还对生活有激情，总是冲动，表示你还不懂生活。
+五十八，如果你不能拥有，那么告诉自己别忘记——如果你能承受那伤痛的话。
+五十九，虽然班级的概念在大学并不明显，但是也别忘记，你的同学你的朋友。
+六十， 准备考研，早点比晚点好。
+六十一，别抱怨四级六级之类的东西，那是证明你能力的很好的东西。
+六十二，要有精英意识，考虑一下，大学的人了，迷恋武侠言情，已经没有意义。
+六十三，莫过于梗直，莫过于圆滑。外圆内方即可。
+六十五，永远别渴望做个任何人都不得罪的人，有人反对有人支持然后自己做出决定是精彩的人生。
+六十六，魄力，要有魄力，即使是失败，也不要让自己的人生平庸。
+六十七，喜欢一个人，就勇敢的告诉他或者她，我说过大学是学习的地方，但是我理解爱情的力量。追求你真正爱的人，只要自己认为值得，那就是值得的。
+六十八，应该相信一句话：没有不可能的事情！！真的没有，只要去做，现在我们是学生，十年后呢？？二十年后呢？？想想。
+六十九，我不去想是否能够成功,既然选择了远方,便只顾风雨兼程。
+七十，后悔是一种耗费精神的情绪.后悔是比损失更大的损失,比错误更大的错误.所以不要后悔。
+七十一，我们确实活得艰难，一要承受种种外部的压力，更要面对自己内心的困惑。在苦苦挣扎中，如果有人向你投以理解的目光，你会感到一种生命的暖意，或许仅有短暂的一瞥，就足以使我感奋不已。
+七十二，每个人都有潜在的能量，只是很容易:被习惯所掩盖，被时间所迷离,被惰性所消磨.
+七十三，于千万人之中，遇见你所遇见的人；于千万年之中，时间的无涯荒野里，没有早一步，也没有晚一步，刚巧赶上了
+七十四，你可以选择坚持，也可以选择放弃。没有对错。我是说对爱情来说，但是重要的是坚持你的选择。
+七十五，相信时间的力量，可以冲淡很多东西。
+七十六，在大学里坚持每天做一件相同的事，很能锻炼我们，试试便知。
+七十七，多笑笑，会慢慢让自己真的快乐起来。
+七十八,人生有很多次如果,但是没有一次但是.
+七十九,当你不懂得放弃的时候,你可以告诉自己你还懂得坚持.
+八十,大学的手机是否应该用只有自己有答案.
+八十一,永远不要瞧不起大学里的贫困生.
+八十二,在大学时代看看学校的招聘会吧.你会感觉到一种前途的危机.
+八十三,全是人.全是人.全是人.我只有连说三次全是人才能形容出场面的人数.——寝室一个大哥向我形容招聘会的场面,后来我去看了.全是人.全是人.全是人.
+八十四,越大,我们就会发现对与错越是那么不明显.这不是错,这是事实,而且无法改变. 记得结交每一个值得结交的朋友。
+八十五，无聊的时候，别忘记朋友。朋友无聊的时候，别忘记你是他们的朋友。
+八十六，社会上要想分出层次，只有一个办法，那就是竞争，你必须努力，否则结局就是被压在社会的底层。
+注：此为复制粘贴
+```
+
+```
+1、正确的思考 
+先正确的评判自己，才有能力评断他人。 
+你是否欺骗别人，或是自己？想清楚再回答。 
+三思而后行的人，很少会做错事情。 
+企图说服不用大脑的人，是徒劳无功。 
+认为整个世界都错的人，极可能错在自己。
+2、行动 
+观察走在你前面的人，看看他为何领先，学习他的做法。 
+忙碌的人才能把事情做好，呆板的人只会投机取巧。 
+优柔寡断的人，即使做了决定，也不能贯彻到底。 
+善意需要适当的行动表达。 
+3、相信 
+相信你做得到，你一定会做到。 
+不断告诉自己某一件事，即使不是真的，最后也会让自己相信。 
+4、警觉 
+对于那些使狗和儿童感到畏惧的人应提高警觉。 
+警觉过度犹如不及，使人变得多疑。 
+不要羡慕邻居的篱笆更绿，或许荆棘多于青草。 
+对于满口“别人都说 ”的人，问他“别人”是谁，就会看到他张口结舌的窘态。 
+陌生人过分热心帮你做事时 ，当心他别有居心。 
+5、挑战
+如果你想要更上一层楼，就为别人提供超出预期更多更好的服务。 
+每一次都尽力超越上次的表现，很快你就会超越周围的人。 
+如果你一直保持现状，10年后将会如何？ 
+在你有把握做得更好之前，不要破坏任何东西。 
+6、主要目标 
+你的人生想要什么？你能付出什么作为回馈？ 
+成功的人只想自己要的，而非自己不要的。 
+不要管过去做了什么，重要的是你将来要做什么？ 
+如果你不知道你自己的一生要的是什么，你还想得到什么？ 
+智者除了有所为，还能有所不为。 
+为自己想要的忙碌，如此即无暇担忧你不想要的。 
+不要怕目标定得太高，你可能需要退而求其次。 
+如果你不会知道自己要什么，别说你没有机会。 
+7、合作 
+请求比命令能得到更好的结果。 
+善于下命令的人，必定能够服从命令并且执行。 
+乐意合作产生支持的力量，强迫服从导致失败的结果。 
+告诉上司你想要什么，看他是否愿意帮助你去排除障碍。 
+友善的合作比煽动更得人心。 
+合作必须从部门领导开始，效率亦然。 
+狼狈为奸绝非合作。 
+除非你自己愿意被别人伤害，否则没有人能够伤害你。 
+8、勇气 
+勇敢的承认自己不知道的事情，才能学习并进步。 
+勇气只是多跨一步超越恐惧。 
+抱怨自己没有机会的人，多半没有勇气冒险。 
+9、批评 
+一事无成的无名小卒才能免于批评。 
+不要怕不公正的批评，但要知道哪些是不公正的批评。 
+不要批评你不了解的人，要趁机向他学习。 
+不要怕受人批评。当你提出新的观念，就要准备受人批评。 
+不要批评别人的行为，除非你知道他为何那么做。你在同样的情况下也可能会如此。 
+不能忍受批评，就无法尝试新事物。 
+如果你经常批评别人，何不试着赞美别人？ 
+开始批评之前，最好先略加赞美。 
+如果你想要更受人欢迎，尽量多赞美，少批评。 
+10、行为 
+真正伟大的人，别人会从他的善行感受出来。 
+奖章和头衔不能让你上天堂，善行才能增加你的分量。 
+建设性的行为才能服人，言语的吹嘘无益。 
+不要说你想要什么，用行为表达。 
+善行是赞美自己最好的办法。 
+如果你比别人更具智慧，别人会从你的行为看出来。 
+善意的回应是惩罚对你不义的人最安全的方式。 
+对不喜欢你的人不要多费口舌。 
+花钱想要上天堂的人，一定后悔没有多行善。 
+善行比滔滔雄辩更能打动人心。 
+墓志铭不如善行更另人怀念。 
+世界不会因为所知给你勋章，而会因你的善行而给你荣耀。 
+善行不需要言语的粉饰。 
+11、明确的目标 
+明确的了解自己想要什么，致力追求。 
+一个人没有明确的目标，就象船没有罗盘一样。 
+智者都有清晰思考的习惯。 
+意志力缘于持续的行动、自动自发、明确的目标。 
+诚实与努力的工作，需要明确的目标引导才能成功。 
+缺乏明确的目标，一生将庸庸碌碌。 
+坚定的目标是成功的首要原则。 
+12、教育或学习 
+教育是开发内在的力量。所有的教育都靠自己的体会；没有人能够教育另外一个人。 
+你从工作中学到的，比眼前得到的报酬更可贵。 
+倾听才能学习，说话无益。 
+好老师一定是好学生。 
+不一定把所有的知识都记在心里，能够取得所需的知识即可。 
+知识必须加以运用，才能产生力量。 
+如果你不努力向上司学习，就虚掷了升迁及更好的工作机会。 
+哲学家从犯错的人身上找出人类所犯的错误。 
+善于发问使苏格拉底成为当时的智者。 
+明智的运用知识，吸引更伟大的知识。 
+你自工作中学到的越多，赚得越多。 
+自工作学习的人，等于别人付钱让他上学。 
+知识必须经由行动产生利益，否则无用。 
+13、言之有物 
+记住，别人从你所说的每一个字，了解你所知的多寡。 
+你怎么说和你说什么同样重要。 
+人们在有所求时，语气特别不同。 
+语气委婉别人比较听得进去。 
+口不择言往往造成尴尬的场面。 
+刻薄的话伤人最甚。 
+思考可以随心所欲，表达想法则必须谨慎小心。 
+14、热诚 
+当热诚变成习惯，恐惧和忧虑即无处容身。 
+缺乏热诚的人也没有明确的目标。 
+热诚使想象的轮子转动。 
+一个人缺乏热诚就象汽车没有汽油。 
+善于安排玩乐和工作，两者保持热诚，就是最快乐的人。 
+热诚使平凡的话题变得生动。 　 
+15、多做一点 
+每次你多做一些，别人就欠你一些。 
+让别人做得更好，同时提升自己的价值。 
+善于钓鱼的人选用鱼喜欢的饵。 
+你不能让所有的人喜欢你，却能减少别人讨厌你的原因。 
+与人协商而不产生摩擦，是有待学习的一大课题。 
+多做一些，机会将随之而来。 
+为别人服务最多的人最富有。 
+服务的道路才能通往快乐的城市。 
+16、失败 
+爱迪生失败一万次才发明灯泡。失败一次不必担心。 
+“一般人”只失败一次就放弃。所以“一般人”者众，而爱迪生只有一个。 
+漫无目的，随波逐流是失败的首要原因。 
+让孩子小时侯“好过”，长大之后经常会“难过”。 
+批评别人错误时，更要加入一些赞美。 
+失败和暂时的挫折有极大的差别，了解两者的不同，才能成功。 
+不因一时的挫折停止尝试的人，永远不会失败。 
+许多人只需要再多支持一分钟，多做一次努力，就能反败为胜。 
+企图不劳而获的人，往往一事无成。 
+别人的错误不是你犯错的借口。 
+如果你尽力而为，失败并不可耻。 
+不要责怪孩子不好，怪那些没有教好孩子的大人。 
+错误象花园中的杂草，若未及时铲除，就会到处蔓生。 
+自怜是让人上瘾的麻醉剂。 
+智者注意自己的缺点，一般人吹嘘自己的优点。 
+失败若能将人推出自满的椅子，迫使他做更有用的事情，则是一种福气。 
+失败是一种让人承担更大责任的准备。 
+了解自己为何失败，则失败是资产。 
+17、公平 
+不要忽视小节，宇宙由原子构成。 
+得到帮助最好的方式是开始帮助别人。 
+18、信心 
+信心愈用愈多。 
+除非你愿意，没有人能破坏你对任何事情的信心。 
+所有伟大的奇迹都只是信心的力量。 
+不幸很少会纠缠有希望和信心的人。 
+信心需要立足点，恐惧却能凭空存在。 
+信心缘于明确的目标及积极的态度。 
+信心是一种态度，常使“不可能”消失于无形。 
+信心不能给你需要的东西，却能告诉你如何得到。 
+19、恐惧 
+虚张声势往往显示极深的恐惧。 
+不要因为恐惧而犹疑，前进就能消除恐惧。 
+恐惧是魔鬼最大的武器，人类最大的敌人。 
+意识清楚的人很少畏惧任何东西。 
+信心可以克服恐惧。 
+把你的恐惧留给自己，别人有别人的恐惧。 
+希望和恐惧不会同行。 
+恐惧贫穷的人永远不会富有。 
+20、朋友 
+有求于人才会去找朋友，很快就没有朋友。 
+如果你愿意要朋友，先做别人的朋友。 
+不要让帮助你自消沉中振作的朋友失望。 
+朋友是了解你并尊重你的人。 
+友谊需要经常表达才能长存 
+友谊是看出朋友的缺点却不张扬。 
+21、抱怨 
+如果你非要抱怨，那么你小声一些，以免吵到别人。 
+不要太苛求抱怨的人，他把自己的日子弄得够难过的了。 
+22、健康和习惯 
+如果你感觉无精打采，等到饿了再去吃东西。 
+生病之前就应该看医生。 
+只吃八分饱 
+不断想着疾病，你就会不断生病，健康亦然。 
+新鲜的水果和蔬菜是永远不会过量的健康食品。 
+不要头痛医头，找出病因才是根本之道。 
+吃得多不一定健康。 
+注意饮食习惯，省下看医生的花费。 
+23、残障 
+一位中国西北大学的盲生以速记抄录讲义，卖给视力正常的同学，完成学业。 
+如果你感到泄气，想想又瞎、又盲、又聋，一生过得充实愉快，著书鼓励更多人的海伦凯勒。 
+从顶端开始的人是极大的不幸，因为他只能往往是向下滑。 
+24、快乐 
+有些人累积金钱换取财富，智者累积快乐，与人分享仍取之不竭。 
+快乐在于行动，不只是拥有。 
+剥夺别人的快乐不能使自己快乐。 
+微笑使人更美丽、更愉快，却不费分文。 
+热情比怨恨更得人心。 
+慷慨的给予快乐，自己更快乐。 
+25、和谐 
+和谐使宇宙运转不停。 
+机器的摩擦耗费成本，人际间的摩擦损耗心灵。 
+如果你不同意别人的说法，至少不要和他人争执。 
+促进和平的人受人景仰，挑起摩擦的人遭人嫌恶。 
+记住，至少要两个人才能争执。 
+两个人以上为明确的目标同心协力，将产生无穷的力量。 
+彼此信任是良好人际关系的基础。 
+人际关系良好的人永远不愁没有朋友。 
+喜欢和谐的人通常知道该如何维系。 
+持久的成功建立在和谐的人际关系之上。 
+尽量充当和事佬，就没有太多纷争。 
+趁机浑水摸鱼的人才会挑起人事纷争。
+```
+
+处事22计、心态24条、学会长大20！
+
+
+处事22计
+
+1.看穿但不说穿。很多事情，只要自己心里有数就好了，没必要说出来。
+2.高兴，就笑，让大家都知道。悲伤，就假装什么也没发生。
+3.在不违背原则的情况下，对别人要宽容，能帮就帮，千万不要把人逼绝了，给人留条后路……
+4.快乐最重要，与快乐为伴。
+
+5.不要老在别人面前倾诉你的困境袒露你的脆弱。
+6.没有十全十美的东西，没有十全十美的人，关键是清楚到底想要什么，得到想要的，肯定会失去另外一部分。如果什么都想要，只会什么都得不到。
+7.我喜欢一位朋友说的一句：“善忘是一件好事。”
+8.两个人同时犯了错，站出来承担的那一方叫宽容，另一方欠下的债，早晚都要还。
+9.自己不喜欢的人，可以报之以沉默微笑；自己喜欢的人，深情流露。
+10.不要做刺猬，能不与人结仇就不与人结仇，谁也不恨谁一辈子，有些事情没必要记在心上。
+11.学会妥协的同时，也要坚持自己最基本的原则。
+12.不要停止学习。不管学习什么，语言，厨艺……各种技能。
+13.钱很重要，但不能依靠男人或父母，自己一定要保持赚钱的能力……。
+14.不要太高估自己在集体中的力量，因为当你选择离开时，就会发现即使没有你，太阳照常升起....。
+15.过去的事情可以不忘记，但一定要放下。
+16.即使输掉了一切，也不要输掉微笑……。
+17.不管做了什么选择，都不要后悔，因为后悔也于事无补。
+18.不要因为冲动说一些过激的话。
+19.不要轻易许下承诺，做不到的承诺，比没许下的失望更绝望。
+20.不要觉得不了解也会有爱情。在不了解的时候，我们仅仅是喜欢，达不到爱情；当彼此的缺点暴露出来以后，很多时候这喜欢也就会结束了，无法结束的才是真正的爱情。
+21.说话时可以很直接，人直爽，总比虚伪好。
+22.对自己好一点，心情不好的时候，什么都别考虑，去吃自己爱吃的吧。但是别喝酒。  
+
+
+心态，决定你的人生（每天必读）
+
+1.再烦：也别忘记微笑
+2.再急：也要注意语气
+3.再苦：也别忘记坚持
+4.再累：也要爱惜自己
+5.低调做人;你会一次比一次稳健
+6.高调做事;你会一次比一次优秀
+7.成功的时候不要忘记过去
+8.失败的时候不要忘记未来
+9可以努力争取;不可强求得来。
+
+10.无论输赢都要高姿态
+11.生活不是单行线，一条路走不通，你可以转弯。
+12.泪水和汗水的成分相似;但前者只能为你换来同情，后者却可以为你赢得成功。
+13.变老去是人生的必修课
+14.变成熟是人生的选修课
+15.以锻炼为本，学会健康
+16.以适应为本，学会生存
+17.学会放弃，耐得住寂寞，经得起诱惑
+18.当所有人都低调的时候，你可以选择高调，但不能跑调
+19.学会忘记是生活的技术
+20.学会微笑是生活的艺术
+21.懒惰像生锈一样比操劳更消耗身体
+22.让梦想成真的最好方法就是醒来
+23.哲人无忧、智者常乐。并不是因为所爱就要拥有，而是拥有的一切都爱
+24.不能失去的东西：自制的力量、冷静的力量、希望和信心
+＜笑口常开＞
+＜好运自然来＞
+
+
+学会长大
+
+1.学会把亲情放在第一位,把友情放在第二位,把爱情放在够不到的位置
+2.学会不和父母顶嘴,学会为了维护友谊让步
+3.学会不想着依赖别人,做好自己,让别人依赖你
+4.学会认清自己,不是很好,也不算坏,不把头扬的很高,也不拿眼睛盯别人的脚5.学会把喜欢的人放在心底,默默的喜欢,有种情不需要张扬
+6.学会不为了自己喜欢的人和别人争论,或许你并不了解他
+7.学会口是心非,看到自己喜欢的人和别人在一起,请祝福
+8.学会独自一个人承受一些事,一个人守着一些秘密
+9.学会适当减肥,不要过度,为了某些人,坚持
+10.学会去关心家人,朋友,不要以为他们不会离开我们,就不在意
+11.学会交际,和所有的人搞好关系,踏入社会,面对的人会更多
+12.学会掩饰忧伤,对别人笑,要哭,躲在被窝里
+13.学会成熟处事,即使是装出来的
+14.学会在特殊的节日,给别人一个小小的惊喜,感动一个人很简单,让她（他）知道你心中有她（他）的位置
+15.学会不相信童话故事,永远记得仙杜瑞拉有的水晶鞋是你没有的
+16.学会必要的欺骗,不要说你诚实,埋没了善良更可恶
+17.学会为自己的人生做好打算,自己争取来的更值得珍惜
+18.学会不计较,忘记一些不愉快,也许你会更快乐 
+19.学会无条件付出,想想父母,你会释然 
+20.学会写日记,我们的人生并不是很长,把它记下足可以让你重拾记忆 
+好好过日子,终会长大,学会不让爱我们的人对我们失望 
+拿得起,放得下,该放手的时候,不要拖泥带水,告诉自己,学会自爱,也会活得很好…
 
