--- a/source/_posts/论文-中文版编写.md
+++ b/source/_posts/论文-中文版编写.md
@@ -36,5 +36,13 @@ tags:
 ![](https://i.loli.net/2019/08/07/HloGSqhK7sBWP6a.png)
 其中蓝线为40umSi的探测效率曲线，橙线为304umSi的探测效率曲线。
 #### 质子谱
-[此处应有加不加veto的联合谱]
+![](https://raw.githubusercontent.com/mission-young/Pic/master//img/20190901152447.png)
+这是最后一块Si的质子谱，其中蓝线未加入veto条件限制，而红线加入了veto条件限制。
 
+![](https://raw.githubusercontent.com/mission-young/Pic/master//img/20190901153304.png)
+这是中间一块Si的质子谱。
+
+#### Geant4模拟质子谱
+随后，我们应用EPJA2006文章中给出的质子能量分支比数据作为Geant4模拟输入，来研究β叠加效应。
+![](https://i.loli.net/2019/08/05/WMw75niR9zBVlpH.png)
+上图中实线为实验谱，虚线为经过归一之后的模拟谱。其中实验谱和模拟谱均未设置veto条件。
