--- a/source/_posts/公务员备考攻略.md
+++ b/source/_posts/公务员备考攻略.md
@@ -3,7 +3,80 @@ author: 远方
 date: 2019-09-01 02:08:57
 tags:
 ---
+## 2020年公务员考试相关信息整理
+- 华图官网：http://www.huatu.com/guojia/
+![](https://i.loli.net/2019/09/02/yX8lrKNdh7pkWbx.png)
+- 照9月1号开始复习，12月1号考试，笔试历程整3个月，90天。
+- 2020国家公务员考试职位表尚未发布，根据往年国考职位表发布时间推算，2020国家公务员考试职位表发布时间很可能在2019年10月中下旬。2019国家公务员考试招录规模今年进行了缩减，共有中央机关75个单位和20个直属机构参加，计划招录14537人,共9657个职位。
+- 公告发布时即发布职位表，随后根据职位表选报。根据学历要求、专业要求、政治面貌要求、工作经历要求、地域特征等，进行选择。
+- 笔试分为两大块：行测和申论，行测包括十个部分，130道题，120分钟，分别为
+  1. 数量关系--数学运算
+  2. 言语理解与表达--逻辑填空
+  3. 言语理解与表达--语句表达
+  4. 言语理解与表达--阅读理解
+  5. 判断推理--逻辑判断
+  6. 判断推理--图形推理
+  7. 判断推理--定义判断
+  8. 判断推理--类比推理
+  9. 资料分析
+  10. 常识判断
+  
 
+国家公务员考试行测考试时间只有两个小时。
+
+但是要完成5个专项130-135道题，根据了解，大部分考生做行测卷子后期都会碰到一个问题，时间不够，合理的时间安排可以说直接决定了行测能否拿高分。
+
+在行测考试中共有5个专项9种题型（常识判断、图形推理、类比推理、定义判断、逻辑判断、逻辑填空、片段阅读、数量关系、资料分析）。
+
+在这9种题型中有些题是需要快做的，包括常识判断，图形推理，类比推理，逻辑填空，常识判断20题，用时应控制在10分钟左右，平均30秒一道题左右，常识题不要去纠结，能做出来的很快就能做出来。
+
+拓展资料：完善行测答题顺序，可提高效率
+
+考前一个月左右的时候建议考生开始刷试卷，一来为了查缺补漏，二来就是找到最适合自己的做题顺序。
+
+行测不仅考察的是你的解题能力，还考察考生两个小时的思维转换能力。每个考生的性格都不一样，有些考生适合从理性的思维跳到感性的思维，有些考生喜欢先做自己擅长的专项，有些考生需要一点时间才能进入做题状态等等，所以找到适合自己的做题顺序对行测作答可以起到事半功倍的效果。
+
+先做常识进入考试状态，再做言语，接下来状态最好的时候做资料分析，趁热打铁完成判断推理，最后再做数量关系，做题顺序没有好坏之说，适合自己的就是最好的。
+
+  申论只有一道大题，分为两大类题型，对策类和启示类。考试时间180分钟，总分100分。
+  
+## 时间分配
+  
+- 全面基础复习阶段 6周 手部受伤，前2周重点复习行测。根据书目录统计，
+  1. 数量关系--数学运算 10节
+  2. 言语理解与表达--逻辑填空 2节
+  3. 言语理解与表达--语句表达 2节
+  4. 言语理解与表达--阅读理解 6节
+  5. 判断推理--逻辑判断 6节
+  6. 判断推理--图形推理 7节
+  7. 判断推理--定义判断 2节
+  8. 判断推理--类比推理 4节
+  9. 资料分析 3节
+  10. 常识判断 12节
+  
+  课程总共有54节，2周时间为15天，需要一天完成4节内容。考虑到手的恢复情况，应将数量关系、判断推理--逻辑判断、资料分析三者往后放一点。剩下的部分大多需要在脑海中思考即可完成。因而复习顺序为：
+  1. 2+3
+  2. 4
+  3. 4+7
+  4. 6
+  5. 6
+  6. 8
+  9. 10
+  10. 10
+  11. 10
+  12. 1
+  常识判断每天空闲的时候看一点。每天完成学习任务之后，查看app，进行做题。或者在路上的闲余时间进行做题。
+  额外的时间听申论讲座。
+  
+- 重点提高阶段 3周
+- 纠错阶段 1周
+- 冲刺阶段 2周
+
+
+## 贴吧攻略
+各模块的备考方法 https://tieba.baidu.com/p/5995995816?pn=1
+
+## 知乎收集的一些攻略
 链接：https://www.zhihu.com/question/28345057/answer/41074035
 
 我的计划就是按照3个月12周的时间来指定的。一共有四轮， 
